# Mobile_Missile_Launcher

./: MissileLauncher.dia  README.md
Raspberry/: CMakeLists.txt  Dockerfile
Raspberry/resources/: properties.txt
Raspberry/resources/calibration/: callibration.py  vehicleTurn.txt
Raspberry/resources/training/: averageLearning.py  learn.sh  qValues.txt  qValues_blank.txt  qValues_saved.txt  totalReward.txt  totalReward_epsilon02.txt  totalReward_epsilon10.txt
Raspberry/resources/training/qValues/epsilon02/: qValues_saved_2016_10_19_16-41.txt  qValues_saved_2016_10_19_17-47.txt  qValues_saved_2016_10_19_18-17.txt  qValues_saved_2016_10_20_10-26.txt  qValues_saved_2016_10_20_10-52.txt  qValues_saved_2016_10_20_11-21.txt  qValues_saved_2016_10_20_11-49.txt  qValues_saved_2016_10_20_12-06.txt  qValues_saved_2016_10_20_12-31.txt  qValues_saved_2016_10_20_12-56.txt  qValues_saved_2016_10_20_14-45.txt  qValues_saved_2016_10_20_15-28.txt
Raspberry/resources/training/qValues/epsilon10/: qValues_saved_2016_10_17_11-13-13.txt  qValues_saved_2016_10_17_13-47.txt  qValues_saved_2016_10_17_14-12.txt  qValues_saved_2016_10_17_14-33.txt  qValues_saved_2016_10_17_14-59.txt  qValues_saved_2016_10_17_15-18.txt  qValues_saved_2016_10_17_15-47.txt  (+6 more)
Raspberry/src/: Brain.cpp  Brain.hpp  Exceptions.hpp  LauncherController.cpp  LauncherController.hpp  Logger.hpp  ObjectBox.cpp  ObjectBox.hpp  Properties.cpp  Properties.hpp  RelativePosition.cpp  RelativePosition.hpp  VehicleController.cpp  VehicleController.hpp  VideoProcessor.cpp  VideoProcessor.hpp  main.cpp
(+30 files in other folders)
